# aws-execution-engine

./: .gitignore  CLAUDE.md  CONTRACT.md  README.md  RESEARCH.md  RESEARCH2.md  RESEARCH3.md  RESEARCH4.md  plan-to-fix-gaps-04.09.2026.md  pyproject.toml
.claude/agents/: backend.md  devops.md  qa.md
TODO/: sops-key-ssm-storage.md
aws_exe_sys/: bootstrap_handler.py
aws_exe_sys/common/: bundler.py  code_source.py  dynamodb.py  lambda_handler.py  models.py  s3.py  schemas.py  sops.py  statuses.py
aws_exe_sys/init_job/: handler.py  insert.py  repackage.py  upload.py  validate.py
aws_exe_sys/orchestrator/: dispatch.py  evaluate.py  finalize.py  handler.py  lock.py  read_state.py
aws_exe_sys/ssm_config/: handler.py  insert.py  repackage.py  validate.py
aws_exe_sys/watchdog_check/: handler.py
aws_exe_sys/worker/: callback.py  entrypoint.sh  handler.py  run.py
docker/: Dockerfile  Dockerfile.base  Dockerfile.test
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  DEPLOY.md  REPO_STRUCTURE.md  VARIABLES.md  architecture-diagram.html
infra/01-ecr/: main.tf  outputs.tf
infra/02-deploy/: P1_VERIFICATION.md  codebuild.tf  iam.tf  lambdas.tf  main.tf  outputs.tf  s3.tf  ssm_document.tf  step_functions.tf  terraform.tfvars.example  variables.tf
results/p0/: results.md
results/p1/: results.md
results/p2/: results.md
results/p3/: plan.md  results.md
results/p4/: plan.md  results.md
scripts/: build-code-bundle.sh  generate_tfvars.sh
src/: bootstrap_handler.py
src/common/: bundler.py  code_source.py  dynamodb.py  jwt_creds.py  models.py  s3.py  sops.py  (+1 more)
(+90 files in other folders)
