[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws_exe_sys"
version = "0.1.0"
description = "AWS-native event-driven execution system for IaC and arbitrary command orchestration."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
    "requests>=2.31.0",
]

[tool.setuptools.packages.find]
include = ["aws_exe_sys*"]
exclude = ["tests*", "docs*", "infra*", "docker*", "scripts*", "results*"]
